--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>22/08/23 21:32:07</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestClass.afterTest()[pri:0, instance:com.testcases.TestClass@34997338]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@235370598</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>22/08/23 21:32:07</td>   <td>-12</td> <td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeTest()[pri:0, instance:com.testcases.TestClass@34997338]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@235370598</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>22/08/22 10:33:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestClass.afterTest()[pri:0, instance:com.testcases.TestClass@1698fc68]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1919834117</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>22/08/22 10:33:26</td>   <td>-3711</td> <td>&nbsp;</td><td title="&gt;&gt;TestClass.beforeTest()[pri:0, instance:com.testcases.TestClass@1698fc68]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1919834117</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>22/08/22 10:33:26</td>   <td>-3668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.test()[pri:0, instance:com.testcases.TestClass@1698fc68]">test</td> 
+  <td>main@1919834117</td>   <td></td> </tr>
 </table>
